@@ -37,24 +37,41 @@ void Palette::apply()
 /*
  *	Returns 0 if file not found.
  */
-int Palette::load(const char *fname, int index)
+int Palette::load(const char *fname, int index, const char *xfname, int xindex)
 	{
-		U7object pal(fname, index);
-		size_t len;
-		char *buf;
-		if (!pal.retrieve(&buf, len))
-			return 0;
-		if(len==768) {	// Simple palette
-			memcpy(pal1,buf,768);	// Set the first palette
-			memset(pal2,0,768);		// The second one is black
-		} else {			// Double palette
-			for(int i=0; i<768; i++) {
-				pal1[i]=buf[i*2];
-				pal2[i]=buf[i*2+1];
+	U7object pal(fname, index);
+	size_t len;
+	char *buf;
+	if (!pal.retrieve(&buf, len))
+		return 0;
+	if(len==768) {	// Simple palette
+		if (xindex >= 0)	// Get xform table.
+			{
+			U7object xform(xfname, xindex);
+			char *xbuf; size_t xlen;
+			if (!xform.retrieve(&xbuf, xlen))
+				xindex = -1;
+			else
+				for (int i = 0; i < 256; i++)
+					{
+					int ix = xbuf[i];
+					pal1[3*i] = buf[3*ix];
+					pal1[3*i+1] = buf[3*ix+1];
+					pal1[3*i+2] = buf[3*ix+2];
+					}
+			delete [] xbuf;
 			}
+		if (xindex < 0)		// Set the first palette
+			memcpy(pal1,buf,768);
+		memset(pal2,0,768);	// The second one is black
+	} else {			// Double palette
+		for(int i=0; i<768; i++) {
+			pal1[i]=buf[i*2];
+			pal2[i]=buf[i*2+1];
 		}
-		delete [] buf;
-		return 1;
+	}
+	delete [] buf;
+	return 1;
 	}
 	
 void Palette::set_brightness(int bright)
